# midi-stream-parser-rs

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
